syntax = "proto3";

package org.itson.alarma;

// Servicio gRPC para manejar alarmas
service AlarmasServidor {
  rpc DesactivarAlarma (AlarmaDTO) returns (Empty);
}

// Mensaje que representa una alarma
message AlarmaDTO {
  string idAlarma = 1;
  repeated string idSensores = 2;
  string invernadero = 3;
  float valorMinimo = 4;
  float valorMaximo = 5;
  string magnitud = 6;
  string unidad = 7;
  string medioNotificacion = 8;
  bool activo = 9;
}

message Empty {} // Mensaje vacío, utilizado para no pasar parámetros
